// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Frontend.Layout.ButtonNavigation component doesn't render anything when not logged in on home 1`] = `
<section
  className="bg-neutral05"
>
  <div
    className="container"
  >
    <nav
      className="button-nav"
    >
      <a
        className="button-icon-primary"
        href="/projects"
        onClick={[Function]}
      >
        <span>
          <i
            aria-hidden="true"
            className="manicon manicon-books-on-shelf"
          />
          See All Projects
        </span>
      </a>
    </nav>
  </div>
</section>
`;

exports[`Frontend.Layout.ButtonNavigation component renders correctly 1`] = `
<section
  className="bg-neutral05"
>
  <div
    className="container"
  >
    <nav
      className="button-nav"
    >
      <a
        className="button-icon-primary"
        href="/projects"
        onClick={[Function]}
      >
        <span>
          <i
            aria-hidden="true"
            className="manicon manicon-books-on-shelf"
          />
          See All Projects
        </span>
      </a>
      <a
        className="button-icon-primary"
        href="/following"
        onClick={[Function]}
      >
        <span>
          <i
            aria-hidden="true"
            className="manicon manicon-books-with-glasses"
          />
          Projects You’re Following
        </span>
      </a>
    </nav>
  </div>
</section>
`;

exports[`Frontend.Layout.ButtonNavigation component respects the grayBg prop 1`] = `
<section
  className=""
>
  <div
    className="container"
  >
    <nav
      className="button-nav"
    >
      <a
        className="button-icon-primary"
        href="/projects"
        onClick={[Function]}
      >
        <span>
          <i
            aria-hidden="true"
            className="manicon manicon-books-on-shelf"
          />
          See All Projects
        </span>
      </a>
      <a
        className="button-icon-primary"
        href="/following"
        onClick={[Function]}
      >
        <span>
          <i
            aria-hidden="true"
            className="manicon manicon-books-with-glasses"
          />
          Projects You’re Following
        </span>
      </a>
    </nav>
  </div>
</section>
`;

exports[`Frontend.Layout.ButtonNavigation component respects the showBrowse prop 1`] = `
<section
  className="bg-neutral05"
>
  <div
    className="container"
  >
    <nav
      className="button-nav"
    >
      <a
        className="button-icon-primary"
        href="/projects"
        onClick={[Function]}
      >
        <span>
          <i
            aria-hidden="true"
            className="manicon manicon-books-on-shelf"
          />
          See All Projects
        </span>
      </a>
      <a
        className="button-icon-primary"
        href="/following"
        onClick={[Function]}
      >
        <span>
          <i
            aria-hidden="true"
            className="manicon manicon-books-with-glasses"
          />
          Projects You’re Following
        </span>
      </a>
    </nav>
  </div>
</section>
`;

exports[`Frontend.Layout.ButtonNavigation component respects the showFollowing prop 1`] = `
<section
  className="bg-neutral05"
>
  <div
    className="container"
  >
    <nav
      className="button-nav"
    >
      <a
        className="button-icon-primary"
        href="/projects"
        onClick={[Function]}
      >
        <span>
          <i
            aria-hidden="true"
            className="manicon manicon-books-on-shelf"
          />
          See All Projects
        </span>
      </a>
    </nav>
  </div>
</section>
`;
